# xxp

./: .gitignore  LICENSE  README.markdown
adaptors/cpp/include/: xxp.hpp
core/: xxp.cabal
core/adaptors/cpp/include/: xxp  xxp.hpp
core/cmake/: FindZMQ.cmake
core/lib-src/: XXP.hs
core/lib-src/XXP/: Core.hs  Experiment.hs  IPC.hs  Logging.hs  Process.hs  Setup.hs  State.hs  Util.hs
core/lib-src/XXP/Modules/: Build.hs  HPC.hs  Shell.hs  Spawn.hs  VCS.hs
core/lib-src/XXP/PostProcessing/: Logs.hs
core/lib-src/Xxp/: Core.hs
core/scaffold/cpp/: CMakeLists.txt  main.cpp
core/scaffold/xxp/: config.json  xp_cpp.hs
core/src/: TermSize.hsc  Xxp.hs
example/: config.json  config_gen.json  config_test1.json  config_test2.json  force.json  log.json  xp_gen.hs  xp_test1.hs  xp_test2.hs
example/config/: params.json
example/log/201302282124283be23040-81ed-11e2-8001-e2a1cf5b9f37/: id.json  log.txt  rev
example/log/201302282124343f989bf2-81ed-11e2-8001-d53b8ee0c35f/: config.json  id.json  log.txt
example/log/2013022821244746d44d30-81ed-11e2-8001-d21bcc71fa23/: id.json  log.txt
example/src/: CMakeLists.txt  main.cpp  main_gen.cpp
mpi/: CMakeLists.txt  mpibridge.cpp  process.hpp
