Name:			xxp
Version:		0.1
License:		MIT
Author:			Malte Harder <info@malteharder.de>
Maintainer:		Malte Harder <info@malteharder.de>
Build-Type:		Simple

Cabal-Version:       	>=1.8

Library
  Hs-Source-Dirs:	lib-src
  Build-Depends:	base >= 3 && <6,
                        transformers,
                        hslogger,
                        bytestring,
                        aeson, 
                        filepath,
                        uuid, 
                        time, 
                        old-locale, 
                        directory, 
                        vector, 
                        process,
                        unordered-containers, 
                        split, 
                        text, 
                        lens, 
                        lifted-base,
                        pipes,
                        stm,
                        HSH,
                        zeromq3-haskell,
                        hastache,
                        syb,
                        base64-bytestring
  Exposed-Modules:	XXP, 
                        XXP.Core, 
                        XXP.Experiment, 
                        XXP.Logging, 
                        XXP.State, 
                        XXP.Setup, 
                        XXP.Util,
                        XXP.Process,
                        XXP.IPC
                        XXP.Modules.Shell,
                        XXP.Modules.VCS,
                        XXP.Modules.Build,
                        XXP.Modules.Spawn,
                        XXP.Modules.HPC

Executable xxp
  Hs-Source-Dirs:	src
  Build-Depends:	base >= 3 && <6, 
                        cmdargs >= 0.10 && < 0.11,
                        transformers,
                        process, directory, filepath, hslogger
  Main-Is:		Xxp.hs
